--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -1,4 +1,35 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 td {
+    width: 35px;
+    height: 35px;
+    border: 3px solid black;
+    background-color: rgb(87, 87, 87);
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+    font-size: x-large;
+}
+
+.enemyBoard td {
+    width: 35px;
+    height: 35px;
+    border: 3px solid black;
+    background-color: rgb(7, 94, 14);
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+    font-size: x-large;
+    text-align: center;
+}
+
+.enemyBoard td:hover {
+    background-color: greenyellow;
+}
+
+.playerBoard td {
     width: 35px;
     height: 35px;
     border: 3px solid black;
@@ -6,23 +37,24 @@ td {
     color: white;
     font-weight: bolder;
     font-size: x-large;
+    text-align: center;
 }
 
 .hit {
-    background-color: tomato;
+    background-color: tomato !important;
 }
 
 .miss{
-    background-color: cornsilk;
-    color: rgb(56, 189, 233);
+    background-color: cornsilk !important;
+    color: rgb(56, 189, 233) !important;
 }
 
 .place {
-    background-color: gold;
+    background-color: gold !important;
 }
 
 .placed {
-    background-color: darkgreen;
+    background-color: darkgreen !important;
 }
 
 td:hover {
