--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -4,11 +4,17 @@ body {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 td {
     width: 35px;
     height: 35px;
     border: 3px solid black;
-    background-color: rgb(87, 87, 87);
+    background-color: rgb(105, 105, 105);
     color: rgb(255, 255, 255);
     font-weight: bolder;
     font-size: x-large;
@@ -54,7 +60,7 @@ td {
 }
 
 .placed {
-    background-color: darkgreen !important;
+    background-color: rgb(105, 105, 105) !important;
 }
 
 td:hover {
