--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -18,6 +18,7 @@ td {
     color: rgb(255, 255, 255);
     font-weight: bolder;
     font-size: x-large;
+    text-align: center;
 }
 
 .enemyBoard td {
