--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -1,13 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: left;
 }
 
 td {
@@ -19,6 +13,11 @@ td {
     font-weight: bolder;
     font-size: x-large;
     text-align: center;
+}
+
+.enemyBoard {
+    display: flex;
+    align-self: left;
 }
 
 .enemyBoard td {
@@ -45,6 +44,11 @@ td {
     font-weight: bolder;
     font-size: x-large;
     text-align: center;
+}
+
+.playerBoard-words {
+    display: flex;
+    flex-direction: row;
 }
 
 .hit {
