--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -43,8 +43,8 @@ td {
 .controls {
     display: flex;
     align-items: flex-end;
-    flex-direction: column;
-    /* justify-content: center; */
+    flex-direction: row;
+    justify-content: center;
     /* align-content: center; */
     /* justify-items: center; */
 }
