--- a/web/styles/layout.css
+++ b/web/styles/layout.css
@@ -5,7 +5,7 @@ body {
 }
 
 td {
-    width: 35px;
+    min-width: 35px;
     height: 35px;
     border: 3px solid black;
     background-color: rgb(105, 105, 105);
@@ -21,7 +21,7 @@ td {
 }
 
 .enemyBoard td {
-    width: 35px;
+    min-width: 35px;
     height: 35px;
     border: 3px solid black;
     background-color: rgb(7, 94, 14);
@@ -29,6 +29,7 @@ td {
     font-weight: bolder;
     font-size: x-large;
     text-align: center;
+    flex-shrink: 0;
 }
 
 .enemyBoard td:hover {
@@ -40,7 +41,12 @@ td {
     flex-direction: row;
 }
 
-.controls {
+.controlsText {
+    margin: 10px;
+    flex-shrink: 1;
+}
+
+.controlsImages {
     display: flex;
     align-items: flex-end;
     flex-direction: row;
@@ -49,12 +55,12 @@ td {
     /* justify-items: center; */
 }
 
-.controls img {
+.controlsImages img {
     height: 150px;
 }
 
 .playerBoard td {
-    width: 35px;
+    min-width: 35px;
     height: 35px;
     border: 3px solid black;
     background-color: rgb(56, 189, 233);
